--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,12 @@ services:
     build: ./frontend
     ports:
       - "80:80"
+    depends_on:
+      - backend
+
+  backend:
+    build: ./backend
+    ports:
+      - "5001:5001"
+    environment:
+      - DATABASE_URL=postgres://postgres:admin@database:5432/jobtracker
