--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,24 +3,27 @@
 # Running: docker run -d -p 5001:5001 --name backend job-tracker-backend
 # Stopping: docker stop backend
 
+# Use an official Python runtime as the base image
 FROM python:3.9-slim
 
+# Set the working directory in the container
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Python dependencies
+# Copy the requirements file into the container
 COPY requirements.txt .
+
+# Install the required packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
+# Copy the rest of the application code into the container
 COPY . .
 
-# Expose the port the app runs on
+# Expose the port that the app runs on
 EXPOSE 5001
 
-# Command to run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:5001", "app:app"]
+# Set environment variables
+ENV FLASK_APP=app.py
+ENV FLASK_RUN_HOST=0.0.0.0
+
+# Run the Flask application
+CMD ["flask", "run", "--port=5001"]
