attempt to fix docker issues

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,12 +23,8 @@ services:
       - "5001:5001"
 
   db-init:
-    image: postgres:15
+    build: ./db-init
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - ./db-init/init-tables.sql:/init-tables.sql
-      - ./db-init/init.sh:/init.sh
-    command: ["/init.sh"]
     depends_on:
       - db
